fix the crash bug by adding sleeping functions.

--- a/FlameVU/FlameVU.vcxproj
+++ b/FlameVU/FlameVU.vcxproj
@@ -99,7 +99,7 @@
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;$(CUDA_LIB_PATH);$(NVCUDASAMPLES8_0_ROOT)/common/lib/$(PlatformName);3rd_party/opencv/x64/vc14/lib;3rd_party/easyar/x64/vc14/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
